@@ -45,8 +45,9 @@
 #import "Layer.h"
 #import "Menu.h"
 #import "MenuItem.h"
-#import "Particle.h"
-#import "ParticleSystems.h"
+#import "ParticleSystem.h"
+#import "BigParticleSystem.h"
+#import "ParticleExamples.h"
 #import "Primitives.h"
 #import "Scene.h"
 #import "Scheduler.h"
