@@ -11,11 +11,17 @@
 @end
 
 @class Emitter;
+
 @interface ParticleDemo : Layer
 {
 }
 
 -(NSString*) title;
+@end
+
+@interface BigParticleDemo : ParticleDemo
+{
+}
 @end
 
 @interface DemoFirework : ParticleDemo
@@ -35,6 +41,10 @@
 @end
 
 @interface DemoFlower : ParticleDemo
+{}
+@end
+
+@interface DemoBigParticle : ParticleDemo
 {}
 @end
 
